// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h3>
</div>
`;

exports[`should render correctly for 2 expenses 1`] = `
<div>
  <h3>
    Viewing 
    2
     
    expenses
     totalling 
    $2.38
  </h3>
</div>
`;
